Thu Dec 30 14:06:03 GMT 2004 (njh)
----------------------------------
  * contrib/init/NetBSD2.0:	Added startup and shutdown scripts for NetBSD2.0

Tue Dec 28 16:26:49 GMT 2004 (njh)
----------------------------------
  * clamav-milter/INSTALL:	Added instructions for FreeBSD5.3
    contrib/init/FreeBSD5.2:	Clarified installation instructions - tested
			under FreeBSD5.3

Mon Dec 27 05:12:29 CET 2004 (tk)
---------------------------------
  * freshclam/manager.c: Remove "Cache-Control: no-cache" from remote_cvdhead()
			 Users behind proxies should only use the DNS method
			 (now default, hardcoded)

Mon Dec 27 05:01:54 CET 2004 (tk)
---------------------------------
  * freshclam/manager.c: use If-Modified-Since in --no-dns mode (based on code
			 by Reini Urban <rurban*x-ray.at>)

Mon Dec 27 01:09:20 CET 2004 (tk)
---------------------------------
  * libclamav/scanners.c: Add missing ArchiveBlockMax rule for recursion limit
			  (reported by HR <haavard*zyf.no-ip.org>)

Wed Dec 22 16:08:49 GMT 2004 (trog)
-----------------------------------
  * sigtool/vba.c: Add some more Word6 tokens.

  * libclamav/htmlnorm.c: Don't set execute bit on temp files.

Tue Dec 21 18:42:44 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Fix fault tolerance problem which could cause
	clamav-milter to attempt to talk to a clamd that was down before
	switching to a working clamd

Tue Dec 21 16:44:13 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Support for OS/2 - patch by TK

Tue Dec 21 04:11:48 CET 2004 (tk)
---------------------------------
  * freshclam: DNSDatabaseInfo: optimised and hardcoded

Mon Dec 20 14:52:03 GMT 2004 (trog)
-----------------------------------
  * libclamav/chmunpack.c: relax over stringent offset checks.
			Explicitly cast some long long constants.

  * libclamav/ole2_extract.c: remove variable size array declaration.

Mon Dec 20 02:57:29 CET 2004 (tk)
---------------------------------